project thumbnails added

--- a/index.html
+++ b/index.html
@@ -68,8 +68,11 @@
                     <div class="project__title">GPX Chemin</div>
                     <a href="https://gpx-chemin.herokuapp.com/" target="_blank" class="project_link"><img src="assets/images/trip-visualizer.svg" class="project__icon" alt="project icon"></a>
                 </div>
+                <div class="project__thumbs">
+                    <img class="project__thumb project__thumb__mobile" draggable="false" src="assets/images/gpx-chemin-mobile_thumb.png" alt="screenshot of project on large screen">
+                    <img class="project__thumb project__thumb__laptop" draggable="false" src="assets/images/gpx-chemin-laptop_thumb.jpg" alt="screenshot of project on mobile screen">
+                </div>
 
-                <img class="project__thumb" src="assets/images/gpx-chemin_thumb.jpg" alt="">
 
                 <p class="project__element project__description">GPX Chemin is a simple web-app to visualize GPX files of sport activities. Leaflet library is used to render the map and Canvas for graph visualization. The files can be loaded from the local drive.</p>
     
@@ -97,6 +100,11 @@
                     <div class="project__title">Go Treks</div>
                     <a class="project__link" target="_blank" href="https://thinkingape46.github.io/go-treks/"><img src="assets/images/gotreks.svg" class="project__icon" alt="project icon"></a>
                 </div>
+                <div class="project__thumbs">
+                    <img class="project__thumb project__thumb__mobile" draggable="false" src="assets/images/go-treks-mobile_thumb.png" alt="screenshot of project on large screen">
+                    <img class="project__thumb project__thumb__laptop" draggable="false" src="assets/images/go-treks-laptop_thumb.jpg" alt="screenshot of project on mobile screen">
+                </div>
+
                 <p class="project__element project__description">Go Treks is a fictional travel website which offers trips to places around Bangalore. It has a simple design, yet packed with all the information and sections a visitor expects from a travel website.
                 </p>
                 <p class="project__element project__description">I have designed and created this site to showcase my ability to make a create a responsive website, vector images (SVG), animations (CSS) sprinkled with JavaScript. All the images, logos and animations are created by me.
@@ -123,6 +131,11 @@
                 <div class="project__element project__head">
                     <div class="project__title">Marie Curie</div>
                     <a href="https://thinkingape46.github.io/marie-curie/" target="_blank" class="project_link"><img src="assets/images/marie-curie.svg" class="project__icon" alt="project icon"></a>
+                </div>
+
+                <div class="project__thumbs">
+                    <img class="project__thumb project__thumb__mobile" draggable="false" src="assets/images/marie-curie-mobile_thumb.png" alt="screenshot of project on large screen">
+                    <img class="project__thumb project__thumb__laptop" draggable="false" src="assets/images/marie-curie-laptop_thumb.jpg" alt="screenshot of project on mobile screen">
                 </div>
 
                 <p class="project__element project__description">This is my simple static website I have made as a tribute for two time nobel prize winner Marie Curie.</p>
