updated to welcome section

--- a/index.html
+++ b/index.html
@@ -26,26 +26,30 @@
             <div id="about-me">
                 <div id="about-me_text">
                     <p id="welcome-section_heading">My name is <span id="name">Jagadeesh Kumar</span></p>
-                    <p id="welcome-section_sub-heading">Front-end developer and artist</p>
-                    <p id="welcome-section__bio">I design and build user interfaces, and experiment with programming through javascript. I am also a artist who create raster, 3D and vector images.</p> 
+                    <p id="welcome-section_sub-heading">I am a Front-end developer and artist</p>
+                    <p id="welcome-section__bio">I design and build user interfaces, and experiment with programming through javascript. I am also a artist who create arts using raster, vector and 3D tools.</p> 
                 </div>
             </div>
 
             <div id="welcome-section_description">
-                <p class="skills">Core Skills</p>
+                
+                <p class="skills">Technical Skills</p>
                 <div class="languages">
-                    <div class="html language">
-                        <a class="skill__member" target="_blank" href="https://en.wikipedia.org/wiki/HTML"><img class="skill__image" src="assets/images/html5.svg" alt="logo of html5"></a>
-                        <p class="language_text">HTML</p>
+                    <div class="language html">
+                        <a class="skill__member html__link" target="_blank" href="https://en.wikipedia.org/wiki/HTML"><img class="skill__image" src="assets/images/html5.svg" alt="logo of html5"></a>
                     </div>
-                    <div class="language">
-                        <a class="skill__member" target="_blank" href="https://en.wikipedia.org/wiki/CSS"><img class="skill__image" src="assets/images/css3.svg" alt="logo of css"></a>
-                        <p class="language_text">CSS</p>
+                    <div class="html__orbit"></div>
+
+                    <div class="language css">
+                        <a class="skill__member css__link" target="_blank" href="https://en.wikipedia.org/wiki/CSS"><img class="skill__image" src="assets/images/css3.svg" alt="logo of css"></a>
                     </div>
-                    <div class="language">
-                        <a class="skill__member" target="_blank" href="https://en.wikipedia.org/wiki/JavaScript"><img class="skill__image" src="assets/images/javascript.svg" alt="logo of javascript"></a>
-                        <p class="language_text">JavaScript</p>
+                    <div class="css__orbit"></div>
+
+                    <div class="language javascript">
+                        <a class="skill__member javascript__link" target="_blank" href="https://en.wikipedia.org/wiki/JavaScript"><img class="skill__image" src="assets/images/javascript.svg" alt="logo of javascript"></a>
                     </div>
+                    <div class="js__orbit"></div>
+
                 </div>
             </div>
             <div class="background-bar-one"></div>
