Updated text size

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <meta name="author" content="Jagadeesh Kumar" />
     <meta
       name="description"
-      content="My name is Jagadeesh Kumar, Front-end developer and an artist. I design and create user interfaces, also like to experiment with programming in general through creating applications. My other hobbies are science, art, cycling, running etc."
+      content="My name is Jagadeesh Kumar, Front-end developer and an artist. I design and build user interfaces, and experiment with
+      programming. I am also an artist who create
+      arts using raster, vector and 3D tools. My other hobbies are science, art, cycling, running etc."
     />
     <link
       rel="shortcut icon"
@@ -59,8 +61,8 @@
             </p>
             <p id="welcome-section__bio" class="text--full-width">
               I design and build user interfaces, and experiment with
-              programming through javascript. I am also an artist who create
-              arts using raster, vector and 3D tools.
+              programming. I am also an artist who create arts using raster,
+              vector and 3D tools.
             </p>
           </div>
         </div>
