updated the text and links

--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <meta name="author" content="Jagadeesh Kumar" />
     <meta
       name="description"
-      content="My name is Jagadeesh Kumar, Front-end developer and an artist. I design and build user interfaces, and experiment with
-      programming. I am also an artist who create
-      arts using raster, vector and 3D tools. My other hobbies are science, art, cycling, running etc."
+      content="My name is Jagadeesh Kumar, this is my software application developer portfolio. I write code, study mathematics, sciences, materials science, engineering and computing. sometimes involve in creating art using raster, vector, pencil and 3d modelling tools"
     />
     <link
       rel="shortcut icon"
@@ -31,7 +29,7 @@
     <link rel="stylesheet" href="assets/styles/styles.css" />
     <meta
       name="google-site-verification"
-      content="hHcgob94hTfKzDqe_BTHVgxOSfAOJ9TVq0DSFCgbygQ"
+      content="FhFQ427HLlSpbvuYlSeR3WIvfBAOCMagMNsWkasmU8o"
     />
     <title>Jagadeesh Kumar</title>
   </head>
@@ -39,13 +37,19 @@
     <nav id="navbar">
       <ul class="nav-list">
         <li class="nav-list_item">
-          <a class="nav-link" href="#welcome-section">About Me</a>
+          <a rel="noreferrer noopener" class="nav-link" href="#welcome-section"
+            >About Me</a
+          >
         </li>
         <li class="nav-list_item">
-          <a class="nav-link" href="#projects">Projects</a>
+          <a rel="noreferrer noopener" class="nav-link" href="#projects"
+            >Projects</a
+          >
         </li>
         <li class="nav-list_item">
-          <a class="nav-link" href="#footer">Contact</a>
+          <a rel="noreferrer noopener" class="nav-link" href="#footer"
+            >Contact</a
+          >
         </li>
       </ul>
     </nav>
@@ -57,21 +61,23 @@
               My name is <span id="name">Jagadeesh Kumar</span>
             </p>
             <p id="welcome-section_sub-heading" class="text--full-width">
-              I am a Front-end developer and an artist
+              I write code, study mathematics, sciences, materials science,
+              engineering and computing. sometimes involve in creating art using
+              raster, vector, pencil and 3d modelling tools
             </p>
             <p id="welcome-section__bio" class="text--full-width">
-              I design and build user interfaces, and experiment with
-              programming. I am also an artist who create arts using raster,
-              vector and 3D tools.
+              This website purpose is to act as my portfolio for software
+              application developement.
             </p>
           </div>
         </div>
 
         <div id="welcome-section_description">
-          <p class="skills">Technical Skills</p>
+          <p class="skills"></p>
           <div class="languages">
             <div class="language html">
               <a
+                rel="noreferrer noopener"
                 class="skill__member html__link"
                 target="_blank"
                 href="https://en.wikipedia.org/wiki/HTML"
@@ -85,6 +91,7 @@
 
             <div class="language css">
               <a
+                rel="noreferrer noopener"
                 class="skill__member css__link"
                 target="_blank"
                 href="https://en.wikipedia.org/wiki/CSS"
@@ -98,6 +105,7 @@
 
             <div class="language javascript">
               <a
+                rel="noreferrer noopener"
                 class="skill__member javascript__link"
                 target="_blank"
                 href="https://en.wikipedia.org/wiki/JavaScript"
@@ -127,7 +135,7 @@
         id="astronaut"
         alt="svg drawing of an astronaut"
       />
-      <a href="#projects" class="arrow-double-link"
+      <a rel="noreferrer noopener" href="#projects" class="arrow-double-link"
         ><img
           draggable="false"
           src="assets/images/arrow-double.svg"
@@ -138,13 +146,14 @@
 
     <section id="projects">
       <p id="projects__text">Projects</p>
-
       <div id="projects__content">
+        <!-- PROJECT STARTS -->
         <section class="project trip-visualizer">
           <div class="project__element project__head">
-            <div class="project__title">GPX Chemin</div>
+            <div class="project__title">GPXChemin</div>
             <a
-              href="https://gpx-chemin.herokuapp.com/"
+              rel="noreferrer noopener"
+              href="https://gpxchemin.quarklepton.space"
               target="_blank"
               class="project_link"
               ><img
@@ -153,7 +162,7 @@
                 alt="project icon"
             /></a>
           </div>
-          <div class="project__thumbs">
+          <!-- <div class="project__thumbs">
             <img
               class="project__thumb project__thumb__mobile"
               draggable="false"
@@ -166,31 +175,26 @@
               src="assets/images/gpx-chemin-laptop_thumb.jpg"
               alt="screenshot of project on mobile screen"
             />
-          </div>
+          </div> -->
 
           <p class="project__element project__description">
-            GPX Chemin is a simple web-app to visualize GPX files of sport
-            activities. Leaflet library is used to render the map and Canvas for
-            graph visualization. The files can be loaded from the local drive.
-          </p>
-
-          <p class="project__element project__description">
-            It renders the gpx track, graphs and tables for speed, elevation,
-            heart rate etc. My plan for the future is to make the app pull
-            activities through 3rd party APIs such as Strava and Decathlon.
+            Progressive Web App to visualize GPX files. Leaflet library is used
+            to render the map and Canvas for graph visualization. The files can
+            be loaded from the local drive.
           </p>
 
           <p
             class="project__element project__description project__technologies"
           >
-            <span class="project__technologies__span">Technologies:</span> HTML,
-            CSS, JavaScript, Leaflet.js, XML, Node.js, Express.js, Webpack,
-            PostCSS, and Canvas
+            <span class="project__technologies__span">Technologies:</span
+            >JavaScript, Leaflet.js, XML, Node.js, Express.js, Service Worker,
+            Webpack, PostCSS, and Canvas
           </p>
 
           <div class="project__element project__links">
             <div class="project__external">
               <a
+                rel="noreferrer noopener"
                 class="project__github project__button"
                 href="https://github.com/thinkingape46/gpx-chemin"
                 target="_blank"
@@ -203,8 +207,9 @@
                 <p class="text project__links__text">GitHub</p>
               </a>
               <a
+                rel="noreferrer noopener"
                 class="project__live-site project__button"
-                href="https://gpx-chemin.herokuapp.com/"
+                href="https://gpxchemin.quarklepton.space"
                 target="_blank"
               >
                 <img
@@ -217,21 +222,98 @@
             </div>
           </div>
         </section>
+        <!-- PROJECT ENDS -->
 
+        <!-- PROJECT STARTS -->
+        <section class="project how-far">
+          <div class="project__element project__head">
+            <div class="project__title">Sports Activity Fetcher</div>
+            <a
+              rel="noreferrer noopener"
+              href="https://sportactivityfetcher.quarklepton.space"
+              target="_blank"
+              class="project_link"
+              ><img
+                src="assets/images/howfar_logo.svg"
+                class="project__icon"
+                alt="project icon"
+            /></a>
+          </div>
+          <!-- <div class="project__thumbs">
+            <img
+              class="project__thumb project__thumb__mobile"
+              draggable="false"
+              src="assets/images/howfar.jacklearns.in_moto G4_thumb.webp"
+              alt="screenshot of project on large screen"
+            />
+            <img
+              class="project__thumb project__thumb__laptop"
+              draggable="false"
+              src="assets/images/howfar.jacklearns.in_desktop_thumb.webp"
+              alt="screenshot of project on mobile screen"
+            />
+          </div> -->
+
+          <p class="project__element project__description">
+            Fetches the sports activities of an athlete from StravaAPI using
+            OAuth. At it's current version, it can fetch data for a time range.
+          </p>
+
+          <p
+            class="project__element project__description project__technologies"
+          >
+            <span class="project__technologies__span">Technologies:</span>
+            React.js, JavaScript, StravaAPI, Node.js, Express.js.
+          </p>
+
+          <div class="project__element project__links">
+            <div class="project__external">
+              <a
+                rel="noreferrer noopener"
+                class="project__github project__button"
+                href="https://github.com/thinkingape46/how-far"
+                target="_blank"
+              >
+                <img
+                  class="technology__image"
+                  src="assets/images/github.svg"
+                  alt="logo of github"
+                />
+                <p class="text project__links__text">GitHub</p>
+              </a>
+              <a
+                rel="noreferrer noopener"
+                class="project__live-site project__button"
+                href="https://howfar.quarklepton.space"
+                target="_blank"
+              >
+                <img
+                  class="technology__image"
+                  src="assets/images/website.svg"
+                  alt="logo of website"
+                />
+                <p class="text project__links__text">Live Site</p>
+              </a>
+            </div>
+          </div>
+        </section>
+        <!-- PROJECT ENDS -->
+        <!-- PROJECT STARTS -->
         <section class="project gotreks">
           <div class="project__element project__head">
             <div class="project__title">Go Treks</div>
             <a
+              rel="noreferrer noopener"
               class="project__link"
               target="_blank"
-              href="https://thinkingape46.github.io/go-treks/"
+              href="https://gotreks.quarklepton.space"
               ><img
                 src="assets/images/gotreks.svg"
                 class="project__icon"
                 alt="project icon"
             /></a>
           </div>
-          <div class="project__thumbs">
+          <!-- <div class="project__thumbs">
             <img
               class="project__thumb project__thumb__mobile"
               draggable="false"
@@ -244,18 +326,10 @@
               src="assets/images/go-treks-laptop_thumb.jpg"
               alt="screenshot of project on mobile screen"
             />
-          </div>
+          </div> -->
 
           <p class="project__element project__description">
-            Go Treks is a fictional travel website which offers trips to places
-            around Bangalore. It has a simple design, yet packed with all the
-            information and sections a visitor expects from a travel website.
-          </p>
-          <p class="project__element project__description">
-            I have designed and created this site to showcase my ability to make
-            a create a responsive website, vector images (SVG), animations (CSS)
-            sprinkled with JavaScript. All the images, logos and animations are
-            created by me.
+            Fictional travel website template with some animations.
           </p>
 
           <p
@@ -268,6 +342,7 @@
           <div class="project__element project__links">
             <div class="project__external">
               <a
+                rel="noreferrer noopener"
                 class="project__github project__button"
                 href="https://github.com/thinkingape46/go-treks"
                 target="_blank"
@@ -280,8 +355,9 @@
                 <p class="text project__links__text">GitHub</p>
               </a>
               <a
+                rel="noreferrer noopener"
                 class="project__live-site project__button"
-                href="https://thinkingape46.github.io/go-treks/"
+                href="https://gotreks.quarklepton.space"
                 target="_blank"
               >
                 <img
@@ -294,11 +370,12 @@
             </div>
           </div>
         </section>
-
+        <!-- PROJECT STARTS -->
         <section class="project marie-curie">
           <div class="project__element project__head">
             <div class="project__title">Marie Curie</div>
             <a
+              rel="noreferrer noopener"
               href="https://thinkingape46.github.io/marie-curie/"
               target="_blank"
               class="project_link"
@@ -309,7 +386,7 @@
             /></a>
           </div>
 
-          <div class="project__thumbs">
+          <!-- <div class="project__thumbs">
             <img
               class="project__thumb project__thumb__mobile"
               draggable="false"
@@ -322,16 +399,10 @@
               src="assets/images/marie-curie-laptop_thumb.jpg"
               alt="screenshot of project on mobile screen"
             />
-          </div>
+          </div> -->
 
           <p class="project__element project__description">
-            This is my simple static website I have made as a tribute for two
-            time nobel prize winner Marie Curie.
-          </p>
-
-          <p class="project__element project__description">
-            This project showcases my very basic skill of creating a meaningful
-            site with html and css.
+            Simple static website
           </p>
 
           <p
@@ -344,6 +415,7 @@
           <div class="project__element project__links">
             <div class="project__external">
               <a
+                rel="noreferrer noopener"
                 class="project__github project__button"
                 href="https://github.com/thinkingape46/marie-curie"
                 target="_blank"
@@ -356,6 +428,7 @@
                 <p class="text project__links__text">GitHub</p>
               </a>
               <a
+                rel="noreferrer noopener"
                 class="project__live-site project__button"
                 href="https://thinkingape46.github.io/marie-curie/"
                 target="_blank"
@@ -381,6 +454,7 @@
       </div>
       <div class="footer-social">
         <a
+          rel="noreferrer noopener"
           target="_blank"
           href="https://github.com/thinkingape46"
           id="profile-link"
@@ -391,6 +465,7 @@
             class="github social-icon social-icon--footer"
         /></a>
         <a
+          rel="noreferrer noopener"
           target="_blank"
           href="https://www.linkedin.com/in/jagadeesh59621/"
           class="profile-link"
