updated project details fetchvis

--- a/index.html
+++ b/index.html
@@ -227,10 +227,10 @@
         <!-- PROJECT STARTS -->
         <section class="project how-far">
           <div class="project__element project__head">
-            <div class="project__title">Sports Activity Fetcher</div>
+            <div class="project__title">Fetch Vis</div>
             <a
               rel="noreferrer noopener"
-              href="https://sportactivityfetcher.quarklepton.space"
+              href="https://fetchvis.quarklepton.space/"
               target="_blank"
               class="project_link"
               ><img
@@ -284,7 +284,7 @@
               <a
                 rel="noreferrer noopener"
                 class="project__live-site project__button"
-                href="https://howfar.quarklepton.space"
+                href="https://fetchvis.quarklepton.space/"
                 target="_blank"
               >
                 <img
