change urls to jacklearns.in

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <div class="project__title">GPXChemin</div>
             <a
               rel="noreferrer noopener"
-              href="https://gpxchemin.quarklepton.space"
+              href="https://gpxchemin.jacklearns.in"
               target="_blank"
               class="project_link"
               ><img
@@ -205,7 +205,7 @@
               <a
                 rel="noreferrer noopener"
                 class="project__live-site project__button"
-                href="https://gpxchemin.quarklepton.space"
+                href="https://gpxchemin.jacklearns.in"
                 target="_blank"
               >
                 <img
@@ -223,10 +223,10 @@
         <!-- PROJECT STARTS -->
         <section class="project how-far">
           <div class="project__element project__head">
-            <div class="project__title">Fetch Vis</div>
+            <div class="project__title">FetchVis</div>
             <a
               rel="noreferrer noopener"
-              href="https://fetchvis.quarklepton.space/"
+              href="https://fetchvis.jacklearns.in/"
               target="_blank"
               class="project_link"
               ><img
@@ -280,7 +280,7 @@
               <a
                 rel="noreferrer noopener"
                 class="project__live-site project__button"
-                href="https://fetchvis.quarklepton.space/"
+                href="https://fetchvis.jacklearns.in/"
                 target="_blank"
               >
                 <img
@@ -297,12 +297,12 @@
         <!-- PROJECT STARTS -->
         <section class="project gotreks">
           <div class="project__element project__head">
-            <div class="project__title">Go Treks</div>
+            <div class="project__title">GoTreks</div>
             <a
               rel="noreferrer noopener"
               class="project__link"
               target="_blank"
-              href="https://gotreks.quarklepton.space"
+              href="https://gotreks.jacklearns.in"
               ><img
                 src="assets/images/gotreks.svg"
                 class="project__icon"
@@ -353,7 +353,7 @@
               <a
                 rel="noreferrer noopener"
                 class="project__live-site project__button"
-                href="https://gotreks.quarklepton.space"
+                href="https://gotreks.jacklearns.in"
                 target="_blank"
               >
                 <img
