--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
               My name is <span id="name">Jagadeesh Kumar</span>
             </p>
             <p id="welcome-section_sub-heading" class="text--full-width">
-              I write code, study mathematics, sciences, materials science,
-              engineering and computing. sometimes involve in creating art using
-              raster, vector, pencil and 3d modelling tools
+              I write software applications, study mathematics, sciences,
+              materials science, engineering and computing. Also interested
+              Mobile applications, Scientific Computing, Games, 3D printing,
+              Arduino etc.
             </p>
           </div>
         </div>
@@ -146,10 +147,10 @@
         <!-- PROJECT STARTS -->
         <section class="project trip-visualizer">
           <div class="project__element project__head">
-            <div class="project__title">GPXChemin</div>
+            <div class="project__title">GPXChemin - GPX Visualizer</div>
             <a
               rel="noreferrer noopener"
-              href="https://gpxchemin.jacklearns.in"
+              href="https://gpxchemin.quarklepton.space"
               target="_blank"
               class="project_link"
               ><img
@@ -158,21 +159,6 @@
                 alt="project icon"
             /></a>
           </div>
-          <!-- <div class="project__thumbs">
-            <img
-              class="project__thumb project__thumb__mobile"
-              draggable="false"
-              src="assets/images/gpx-chemin-mobile_thumb.png"
-              alt="screenshot of project on large screen"
-            />
-            <img
-              class="project__thumb project__thumb__laptop"
-              draggable="false"
-              src="assets/images/gpx-chemin-laptop_thumb.jpg"
-              alt="screenshot of project on mobile screen"
-            />
-          </div> -->
-
           <p class="project__element project__description">
             Progressive Web App to visualize GPX files. Leaflet library is used
             to render the map and Canvas for graph visualization. The files can
@@ -191,21 +177,8 @@
             <div class="project__external">
               <a
                 rel="noreferrer noopener"
-                class="project__github project__button"
-                href="https://github.com/thinkingape46/gpx-chemin"
-                target="_blank"
-              >
-                <img
-                  class="technology__image"
-                  src="assets/images/github.svg"
-                  alt="logo of github"
-                />
-                <p class="text project__links__text">GitHub</p>
-              </a>
-              <a
-                rel="noreferrer noopener"
                 class="project__live-site project__button"
-                href="https://gpxchemin.jacklearns.in"
+                href="https://gpxchemin.quarklepton.space"
                 target="_blank"
               >
                 <img
@@ -226,7 +199,7 @@
             <div class="project__title">FetchVis</div>
             <a
               rel="noreferrer noopener"
-              href="https://fetchvis.jacklearns.in/"
+              href="https://fetchvis.quarklepton.space/"
               target="_blank"
               class="project_link"
               ><img
@@ -235,20 +208,6 @@
                 alt="project icon"
             /></a>
           </div>
-          <!-- <div class="project__thumbs">
-            <img
-              class="project__thumb project__thumb__mobile"
-              draggable="false"
-              src="assets/images/howfar.jacklearns.in_moto G4_thumb.webp"
-              alt="screenshot of project on large screen"
-            />
-            <img
-              class="project__thumb project__thumb__laptop"
-              draggable="false"
-              src="assets/images/howfar.jacklearns.in_desktop_thumb.webp"
-              alt="screenshot of project on mobile screen"
-            />
-          </div> -->
 
           <p class="project__element project__description">
             Fetches the sports activities of an athlete from StravaAPI using
@@ -266,21 +225,54 @@
             <div class="project__external">
               <a
                 rel="noreferrer noopener"
-                class="project__github project__button"
-                href="https://github.com/thinkingape46/how-far"
+                class="project__live-site project__button"
+                href="https://fetchvis.quarklepton.space/"
                 target="_blank"
               >
                 <img
                   class="technology__image"
-                  src="assets/images/github.svg"
-                  alt="logo of github"
+                  src="assets/images/website.svg"
+                  alt="logo of website"
                 />
-                <p class="text project__links__text">GitHub</p>
+                <p class="text project__links__text">Live Site</p>
               </a>
+            </div>
+          </div>
+        </section>
+        <!-- PROJECT STARTS -->
+        <section class="project krebs">
+          <div class="project__element project__head">
+            <div class="project__title">Krebs - Nutrition Tracker</div>
+            <a
+              rel="noreferrer noopener"
+              href="https://krebs.quarklepton.space"
+              target="_blank"
+              class="project_link"
+              ><img
+                src="assets/images/mito.png"
+                class="project__icon"
+                alt="project icon"
+            /></a>
+          </div>
+          <p class="project__element project__description">
+            Web App to track food intake and nutrition on daily bases. There are
+            over 5000 number of foods to choose from.
+          </p>
+
+          <p
+            class="project__element project__description project__technologies"
+          >
+            <span class="project__technologies__span">Technologies:</span
+            >JavaScript, React.js, Express.js, Node.js, PostgreSQL, MongoDb,
+            Linode, Netlify
+          </p>
+
+          <div class="project__element project__links">
+            <div class="project__external">
               <a
                 rel="noreferrer noopener"
                 class="project__live-site project__button"
-                href="https://fetchvis.jacklearns.in/"
+                href="https://krebs.quarklepton.space"
                 target="_blank"
               >
                 <img
@@ -294,151 +286,6 @@
           </div>
         </section>
         <!-- PROJECT ENDS -->
-        <!-- PROJECT STARTS -->
-        <section class="project gotreks">
-          <div class="project__element project__head">
-            <div class="project__title">GoTreks</div>
-            <a
-              rel="noreferrer noopener"
-              class="project__link"
-              target="_blank"
-              href="https://gotreks.jacklearns.in"
-              ><img
-                src="assets/images/gotreks.svg"
-                class="project__icon"
-                alt="project icon"
-            /></a>
-          </div>
-          <!-- <div class="project__thumbs">
-            <img
-              class="project__thumb project__thumb__mobile"
-              draggable="false"
-              src="assets/images/go-treks-mobile_thumb.png"
-              alt="screenshot of project on large screen"
-            />
-            <img
-              class="project__thumb project__thumb__laptop"
-              draggable="false"
-              src="assets/images/go-treks-laptop_thumb.jpg"
-              alt="screenshot of project on mobile screen"
-            />
-          </div> -->
-
-          <p class="project__element project__description">
-            Fictional travel website template with some animations.
-          </p>
-
-          <p
-            class="project__element project__description project__technologies"
-          >
-            <span class="project__technologies__span">Technologies:</span> HTML,
-            CSS, JavaScript, and SVG.
-          </p>
-
-          <div class="project__element project__links">
-            <div class="project__external">
-              <a
-                rel="noreferrer noopener"
-                class="project__github project__button"
-                href="https://github.com/thinkingape46/go-treks"
-                target="_blank"
-              >
-                <img
-                  class="technology__image"
-                  src="assets/images/github.svg"
-                  alt="logo of github"
-                />
-                <p class="text project__links__text">GitHub</p>
-              </a>
-              <a
-                rel="noreferrer noopener"
-                class="project__live-site project__button"
-                href="https://gotreks.jacklearns.in"
-                target="_blank"
-              >
-                <img
-                  class="technology__image"
-                  src="assets/images/website.svg"
-                  alt="logo of website"
-                />
-                <p class="text project__links__text">Live Site</p>
-              </a>
-            </div>
-          </div>
-        </section>
-        <!-- PROJECT STARTS -->
-        <section class="project marie-curie">
-          <div class="project__element project__head">
-            <div class="project__title">Marie Curie</div>
-            <a
-              rel="noreferrer noopener"
-              href="https://thinkingape46.github.io/marie-curie/"
-              target="_blank"
-              class="project_link"
-              ><img
-                src="assets/images/marie-curie.svg"
-                class="project__icon"
-                alt="project icon"
-            /></a>
-          </div>
-
-          <!-- <div class="project__thumbs">
-            <img
-              class="project__thumb project__thumb__mobile"
-              draggable="false"
-              src="assets/images/marie-curie-mobile_thumb.png"
-              alt="screenshot of project on large screen"
-            />
-            <img
-              class="project__thumb project__thumb__laptop"
-              draggable="false"
-              src="assets/images/marie-curie-laptop_thumb.jpg"
-              alt="screenshot of project on mobile screen"
-            />
-          </div> -->
-
-          <p class="project__element project__description">
-            Simple static website
-          </p>
-
-          <p
-            class="project__element project__description project__technologies"
-          >
-            <span class="project__technologies__span">Technologies:</span> HTML,
-            CSS, JavaScript.
-          </p>
-
-          <div class="project__element project__links">
-            <div class="project__external">
-              <a
-                rel="noreferrer noopener"
-                class="project__github project__button"
-                href="https://github.com/thinkingape46/marie-curie"
-                target="_blank"
-              >
-                <img
-                  class="technology__image"
-                  src="assets/images/github.svg"
-                  alt="logo of github"
-                />
-                <p class="text project__links__text">GitHub</p>
-              </a>
-              <a
-                rel="noreferrer noopener"
-                class="project__live-site project__button"
-                href="https://thinkingape46.github.io/marie-curie/"
-                target="_blank"
-              >
-                <img
-                  class="technology__image"
-                  src="assets/images/website.svg"
-                  alt="logo of website"
-                />
-                <p class="text project__links__text">Live Site</p>
-              </a>
-            </div>
-          </div>
-        </section>
       </div>
     </section>
 
